--- a/app/globals.css
+++ b/app/globals.css
@@ -8,3 +8,7 @@
   --font-chivo: "Chivo", "sans-serif";
   --font-sofia: "Sofia", "cursive";
 }
+
+.hover-svg-parent:hover svg {
+  opacity: 1 !important;
+}
