--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4781,12 +4781,7 @@ ul {
   max-width: 20px;
 }
 
-.mavo-footer-3 .mav-form ::placeholder {
-  color: #d1d1d1;
-  opacity: 1; /* Firefox */
-}
-
-.mavo-footer-3 .copy-right-area {
+.mavo-footer-3 .mavo-footer-3 .copy-right-area {
   color: #ffffff;
   z-index: 999;
 }
@@ -10667,6 +10662,23 @@ blog-single
   text-align: center;
   padding-top: 200px;
   padding-bottom: 150px;
+  position: relative;
+}
+
+.bread-crumb.cloth::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+
+.bread-crumb.cloth > * {
+  position: relative;
+  z-index: 2;
 }
 
 .bread-crumb.cloth .bread-crumb-title h2 {
