midway through the home page

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -853,7 +853,7 @@
     right: 30%;
     bottom: 35%;
   }
-  .mavo-title-style-6 .hidden {
+  .mavo-title-style-6 .hiddenn {
     font-size: 120px;
   }
 }
@@ -949,7 +949,7 @@
     position: static;
     transform: translateX(0);
   }
-  .mavo-title-style-6 .hidden {
+  .mavo-title-style-6 .hiddenn {
     font-size: 90px;
   }
   .mavo-about-us-bag-banner .banner-sub-title {
@@ -2354,7 +2354,7 @@
   .mavo-shoes .swiper-slide {
     width: 80%;
   }
-  .mavo-title-style-6 .hidden {
+  .mavo-title-style-6 .hiddenn {
     font-size: 60px;
   }
 
