--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3696,7 +3696,7 @@ ul {
   z-index: 99;
 }
 
-.mavo-banner-3 .mavo-title-style-6 .hidden {
+.mavo-banner-3 .mavo-title-style-6 .hiddenn {
   font-size: 70px;
   font-family: "Marcellus";
   color: rgba(32, 35, 34, 0.02);
@@ -8141,7 +8141,7 @@ ul {
   margin-bottom: 60px;
 }
 
-.mavo-title-style-6 .hidden {
+.mavo-title-style-6 .hiddenn {
   font-size: 150px;
   font-family: "Marcellus";
   color: rgba(32, 35, 34, 0.02);
