--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10655,7 +10655,7 @@ blog-single
 }
 
 .bread-crumb.cloth {
-  background-image: url("/images/services/cloth-banner.jpg");
+  background-image: url("/images/services/cloth-banner.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -10672,7 +10672,7 @@ blog-single
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
 
